--- a/styles.css
+++ b/styles.css
@@ -1,39 +1,49 @@
-.card {
-    height: 150px;
-    width: 60px;
+#customBody {
+    text-align:center;
+    background-color:darkolivegreen;
+    padding-bottom: 0px
 }
 
-.column {
-    float: left;
-    width: 40%;
-    padding: 20px;
-    text-align: center;
-  }
-
-  /* Clear floats after image containers */
-  .row::after {
-    content: "";
-    clear: both;
-    display: table;
-  }
-
-
-h1 {
-    font-family: sans-serif;
-    font-size: 25pt;
-    color: red;
-    text-align: center;
-    padding: 20px;
+#start-screen {
+    font-weight:bolder;
+    font-size: 40pt;
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
-h2 {
-    font-family: courier;
-    font-size: 18pt;
-    color: gray;
-    text-align: center;
+.choice-buttons, #play-again-button {
+    background-color: darkgoldenrod;
+    font-weight: 700;
+    border: solid 2px;
+    width: 15%;
+    margin-bottom:70px;
 }
 
-.choicebuttons {
-    text-align: center;
-    font-size: 15pt;
+#game-info {
+    margin-top: 10px;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
 }
+
+h5 {
+    font-family: cursive;
+}
+.card-title {
+    font-size:20pt;
+    padding:20px;
+}
+#game-start {
+    
+    margin-top:0px;
+}
+
+#player-hand-cards {
+    display: flex;
+    justify-content:center;
+    height:25%;
+}
+
+#dealer-hand-cards {
+    display: flex;
+    justify-content:center;
+    height: 25%;
+}
+
