--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@
     background-color: darkgoldenrod;
     font-weight: 700;
     border: solid 2px;
+    color: black;
     width: 15%;
     margin-bottom:70px;
 }
