--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,13 @@
 #customBody {
     text-align:center;
     background-color:darkolivegreen;
-    padding-bottom: 0px
+    padding-bottom: 0px;
 }
 
 #start-screen {
     font-weight:bolder;
     font-size: 40pt;
     font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-}
-
-#dealer-choice {
-    width:80%;
 }
 
 .choice-buttons, #play-again-button {
